bit_roles_tests/tests/compile_fail/missing_variant_rhs.rs
use bit_roles::BitRole;

#[derive(Debug, BitRole, Copy, Clone)]
enum Role {
    One,
    Two,
}

fn main() {}
